fix: adicionado text align para alinha o parágrafo na imagem; removido estilo não usado.

--- a/src/components/CardCategoria/styles.module.css
+++ b/src/components/CardCategoria/styles.module.css
@@ -8,14 +8,12 @@
   align-items: center;
   justify-content: center;
 }
-#paragrafo1 {
-  background-color: red;
-  margin: 0px;
-}
+
 #paragrafo2 {
   font-family: "poppins";
   color: #6c6c80;
   margin: 0px;
   width: 80%;
   overflow: hidden;
+  text-align: center;
 }
